--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,15 @@ actix-web = "4"
 reqwest = "0.12.5"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
+
+[dependencies.sqlx]
+version = "0.7"
+default-features = false
+features = [
+  "runtime-actix-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate"
+]
