--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde = { version = "1.0", features = ["derive"] }
 version = "0.7"
 default-features = false
 features = [
-  "runtime-actix-rustls",
+  "runtime-tokio-rustls",
   "macros",
   "postgres",
   "uuid",
