--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ actix-web = "4"
 reqwest = "0.12.5"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
+config = "0.14.0"
 
 [dependencies.sqlx]
 version = "0.7"
