--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 config = "0.14.0"
 chrono = "0.4.38"
+log = "0.4"
+env_logger = "0.11"
 
 [dependencies.sqlx]
 version = "0.7"
