--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,12 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 config = "0.14.0"
 chrono = "0.4.38"
-log = "0.4"
-env_logger = "0.11"
+# log = "0.4"
+# env_logger = "0.11"
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.2"
 
 [dependencies.sqlx]
 version = "0.7"
