--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4"
-reqwest = "0.12.5"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 config = "0.14.0"
@@ -45,3 +44,7 @@ features = [
     "fast-rng",          # Use a faster (but still sufficiently random) RNG
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ]
+
+[dev-dependencies]
+reqwest = "0.12.5"
+once_cell = "1"
