fix: Better tests using sqlx::test macro
Eliminating creation of new database for each test.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,15 +36,15 @@ features = [
   "postgres",
   "uuid",
   "chrono",
-  "migrate"
+  "migrate",
 ]
 
 [dependencies.uuid]
 version = "1.9.0"
 features = [
-    "v4",                # Lets you generate random UUIDs
-    "fast-rng",          # Use a faster (but still sufficiently random) RNG
-    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+  "v4",                # Lets you generate random UUIDs
+  "fast-rng",          # Use a faster (but still sufficiently random) RNG
+  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ]
 
 [dev-dependencies]
