--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.2"
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.7"
+unicode-segmentation = "1"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -50,3 +51,4 @@ features = [
 [dev-dependencies]
 reqwest = "0.12.5"
 once_cell = "1"
+claim = "0.5"
