--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ tracing-log = "0.2"
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.7"
 unicode-segmentation = "1"
+# validator = { version = "0.18", features = ["derive"] }
+email_address = "0.2"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -52,3 +54,6 @@ features = [
 reqwest = "0.12.5"
 once_cell = "1"
 claim = "0.5"
+fake = "2.9"
+quickcheck = "1"
+quickcheck_macros = "1"
