--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,11 @@ tracing-actix-web = "0.7"
 unicode-segmentation = "1"
 # validator = { version = "0.18", features = ["derive"] }
 email_address = "0.2"
+reqwest = { version = "0.12.5", default-features = false, features = [
+  "json",
+  "rustls-tls",
+] }
+serde-aux = "4.5"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -51,7 +56,6 @@ features = [
 ]
 
 [dev-dependencies]
-reqwest = "0.12.5"
 once_cell = "1"
 claim = "0.5"
 fake = "2.9"
