feat: partial implementation for mocking email delivery

--- a/configuration/base.toml
+++ b/configuration/base.toml
@@ -14,3 +14,5 @@ database_name = "newsletter"
 [email_client]
 base_url = "https://app.mailgun.com"
 sender_email = "something@gmail.com"
+authorization_token = "my-secret-token"
+timeout_sec = 10
