--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,10 @@ email_address = "0.2"
 reqwest = { version = "0.12.5", default-features = false, features = [
   "json",
   "rustls-tls",
+  # "multipart",
 ] }
 serde-aux = "4.5"
+wiremock = "0.6.0"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -61,3 +63,6 @@ claim = "0.5"
 fake = "2.9"
 quickcheck = "1"
 quickcheck_macros = "1"
+wiremock = "0.6.0"
+serde_json = "1"
+serde_html_form = "0.2"
