--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -13,7 +13,9 @@ rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 # - Ubuntu, `sudo apt-get install lld clang`
 # - Arch, `sudo pacman -S lld clang`
 [target.x86_64-unknown-linux-gnu]
-rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
+# rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
+linker = "clang"
+rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
 
 # On MacOS, `brew install michaeleisel/zld/zld`
 [target.x86_64-apple-darwin]
