--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ reqwest = { version = "0.12.5", default-features = false, features = [
 serde-aux = "4.5"
 wiremock = "0.6.0"
 rand = { version = "0.8", features = ["std_rng"] }
+thiserror = "1"
+anyhow = "1"
 
 [dependencies.sqlx]
 version = "0.7"
