--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,6 @@ reqwest = { version = "0.12.5", default-features = false, features = [
   # "multipart",
 ] }
 serde-aux = "4.5"
-wiremock = "0.6.0"
 rand = { version = "0.8", features = ["std_rng"] }
 thiserror = "1"
 anyhow = "1"
@@ -62,7 +61,7 @@ features = [
 
 [dev-dependencies]
 once_cell = "1"
-claim = "0.5"
+claims = "0.7"
 fake = "2.9"
 quickcheck = "1"
 quickcheck_macros = "1"
