--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ serde-aux = "4.5"
 rand = { version = "0.8", features = ["std_rng"] }
 thiserror = "1"
 anyhow = "1"
+base64 = "0.22"
+sha3 = "0.10"
 
 [dependencies.sqlx]
 version = "0.7"
