--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ anyhow = "1"
 base64 = "0.22"
 # sha3 = "0.10"
 argon2 = { version = "0.5", features = ["std"] }
+urlencoding = "2"
+htmlescape = "0.3"
 
 [dependencies.sqlx]
 version = "0.7"
