--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,6 @@ tracing-actix-web = "0.7"
 unicode-segmentation = "1"
 # validator = { version = "0.18", features = ["derive"] }
 email_address = "0.2"
-reqwest = { version = "0.12.5", default-features = false, features = [
-  "json",
-  "rustls-tls",
-  # "multipart",
-] }
 serde-aux = "4.5"
 rand = { version = "0.8", features = ["std_rng"] }
 thiserror = "1"
@@ -66,6 +61,11 @@ features = [
   "fast-rng",          # Use a faster (but still sufficiently random) RNG
   "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ]
+
+[dependencies.reqwest]
+version = "0.12"
+default-features = false
+features = ["json", "rustls-tls", "cookies"]
 
 [dev-dependencies]
 once_cell = "1"
