--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ hex = "0.4"
 actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
 actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }
 serde_json = "1"
+actix-web-lab = "0.20"
 
 [dependencies.sqlx]
 version = "0.7"
